cabal-version:      3.0
name:               repro2
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Pickering
maintainer:         matthewtpickering@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Repro
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, text, text-builder
    hs-source-dirs: src
    ghc-options:
      -- This is for performance, and works in combination with '-fspecialise-aggressively'
      -- in the graphql-engine 'executable' stanza below, and in any other dependent
      -- executables (See mono #2610):
      -fexpose-all-unfoldings
      -O2
      -- This seems like a better default for us, lowering memory residency without
      -- impacting compile times too much, though it does increase binary size:
      -funfolding-use-threshold=640

    default-language: Haskell2010
    default-extensions:
      AllowAmbiguousTypes
      BangPatterns
      BlockArguments
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveDataTypeable
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingVia
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NoImplicitPrelude
      OverloadedStrings
      PackageImports
      RankNTypes
      RecordWildCards
      RoleAnnotations
      ScopedTypeVariables
      StandaloneDeriving
      StrictData
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators

